Fixed bug package.json

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "redux-saga": "^0.16.2"
   },
   "scripts": {
-    "dev": "next -p 8080",
+    "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "export": "npm run build && next export"
